[project]
name = "rl-demonattack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ale-py>=0.11.2",
    "gymnasium>=1.2.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[tool.uv]
required-environments = [
    "sys_platform == 'win32'"
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
