[project]
name = "rl-demonattack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ale-py>=0.11.2",
    "gymnasium>=1.2.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "matplotlib>=3.7.0",
    "opencv-python>=4.12.0.88",
    "moviepy>=2.2.1"
]

[tool.uv]
required-environments = [
    "sys_platform == 'win32'"
#    "sys_platform == 'darwin'" #MacOS
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
